--- a/models/user/fields.yaml
+++ b/models/user/fields.yaml
@@ -1,5 +1,5 @@
 fields:
-    user_lastname:
+    user_name:
         label: 用户名
         span: auto
         disabled: 0
@@ -22,7 +22,30 @@ fields:
     user_password_confirmation:
         label: 确认密码
         span: auto
+        required: 1
         context:
             - create
         type: password
         comment: 再次输入相同的密码
+    user_birthdate:
+        label: 出生日期
+        mode: date
+        span: auto
+        type: datepicker
+        comment: 年-月-日
+        format: Y-m-d
+    user_birthplace:
+        label: 出生地
+        span: auto
+        type: text
+    user_regnumber:
+        label: 身份证号
+        span: auto
+        type: text
+    user_level:
+        label: 等级
+        span: auto
+        type: number
+        step: 1  # defaults to 'any'
+        min: 1   # defaults to not present
+        max: 10 # defaults to not present
