完成用户添加、批量导入和主题添加列表功能

--- a/controllers/groups/config_form.yaml
+++ b/controllers/groups/config_form.yaml
@@ -3,7 +3,7 @@ form: $/samubra/exam/models/usergroup/fields.yaml
 modelClass: Samubra\Exam\Models\UserGroup
 defaultRedirect: samubra/exam/groups
 create:
-    redirect: 'samubra/exam/groups/update/:id'
+    redirect: 'samubra/exam/groups/update/:group_id'
     redirectClose: samubra/exam/groups
 update:
     redirect: samubra/exam/groups
