--- a/models/user/fields.yaml
+++ b/models/user/fields.yaml
@@ -1,19 +1,22 @@
 fields:
     user_name:
         label: 用户名
-        span: auto
+        span: storm
+        cssClass: col-md-3
         disabled: 0
         required: 1
         type: text
     user_email:
         label: 电子邮件
-        span: auto
+        span: storm
+        cssClass: col-md-3
         disabled: 0
         required: 1
         type: text
     user_password:
         label: 密码
-        span: auto
+        span: storm
+        cssClass: col-md-3  col-lg-2
         required: 1
         context:
             - create
@@ -21,31 +24,56 @@ fields:
         comment: 至少8位数字字符
     user_password_confirmation:
         label: 确认密码
-        span: auto
-        required: 1
+        span: storm
+        cssClass: col-md-3  col-lg-2
         context:
             - create
         type: password
         comment: 再次输入相同的密码
+    user_regnumber:
+        label: 身份证号
+        required: 1
+        comment: 不能重复
+        span: storm
+        cssClass: col-md-3 col-lg-2
+        type: text
+    user_level:
+        label: 等级
+        comment: 等级越高，权限越大，10级为管理员
+        span: storm
+        cssClass: col-md-3 col-lg-2
+        type: number
+        step: 1  # defaults to 'any'
+        min: 1   # defaults to not present
+        max: 10 # defaults to not present
+    user_firstname:
+        label: 用户姓
+        span: storm
+        cssClass: col-md-3 col-lg-2
+        disabled: 0
+        type: text
+    user_lastname:
+        label: 用户名字
+        span: storm
+        cssClass: col-md-3
+        disabled: 0
+        type: text
     user_birthdate:
         label: 出生日期
         mode: date
-        span: auto
+        span: storm
+        cssClass: col-md-3
         type: datepicker
         comment: 年-月-日
         format: Y-m-d
     user_birthplace:
         label: 出生地
-        span: auto
+        span: storm
+        cssClass: col-md-3 col-lg-2
         type: text
-    user_regnumber:
-        label: 身份证号
-        span: auto
-        type: text
-    user_level:
-        label: 等级
-        span: auto
-        type: number
-        step: 1  # defaults to 'any'
-        min: 1   # defaults to not present
-        max: 10 # defaults to not present
+    groups:
+        label: 用户组
+        type: partial
+        list: groups
+        span: storm
+        cssClass: col-md-4
