修改显示主题页面

--- a/models/subject/fields.yaml
+++ b/models/subject/fields.yaml
@@ -1,14 +1,12 @@
 fields:
     module:
-        label: 模块
+        label: 所属模块
         nameFrom: module_name
-        descriptionFrom: module_enabled
-        prompt: '点击 %s 选择模块'
-        list: $/samubra/exam/models/module/columns.yaml
+        descriptionFrom: description
         span: storm
         cssClass: col-md-4
         required: 1
-        type: recordfinder
+        type: relation
     subject_name:
         label: 主题名称
         span: storm
@@ -27,4 +25,5 @@ fields:
         size: ''
         mode: tab
         span: full
-        type: markdown
+        type: richeditor
+
