--- a/models/user/import_columns.yaml
+++ b/models/user/import_columns.yaml
@@ -7,9 +7,8 @@ columns:
         label: 用户名
         type: text
         searchable: true
-    user_full_name:
+    user_firstname:
         label: 姓名
-        select: concat(user_firstname, '', user_lastname)
     user_email:
         label: EMAIL
         type: text
