修改题目和答案的编辑器

--- a/models/answer/for_question_fields.yaml
+++ b/models/answer/for_question_fields.yaml
@@ -17,7 +17,7 @@ fields:
         span: full
         required: 1
         stretch: 0
-        type: richeditor
+        type: textarea
     _show_answer_explanation:
         label: 显示答案解释
         span: storm
